[gd_scene load_steps=6 format=3 uid="uid://baed3i6moisqw"]

[ext_resource type="Script" uid="uid://chtfmpc3bo36d" path="res://scripts/core/Probe.gd" id="1_x25qn"]
[ext_resource type="Script" uid="uid://ohod7wugaa27" path="res://scripts/rendering/TrailRenderer.gd" id="2_kjuhm"]
[ext_resource type="Script" uid="uid://c0ptptv0ne5lg" path="res://scripts/rendering/OrganicShipRenderer.gd" id="3_228i5"]
[ext_resource type="Script" uid="uid://dtn16315ylfhl" path="res://scripts/ai/ProbeAI.gd" id="4_minnb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c44ku"]

[node name="Probe" type="CharacterBody2D"]
script = ExtResource("1_x25qn")

[node name="TrailRenderer" type="Node2D" parent="."]
script = ExtResource("2_kjuhm")

[node name="OrganicShipRenderer" type="Node2D" parent="."]
script = ExtResource("3_228i5")

[node name="ThrusterParticles" type="CollisionShape2D" parent="."]

[node name="ProbeAI" type="Node" parent="."]
script = ExtResource("4_minnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c44ku")
